--- a/MVCEntityApp/Views/employees/Index.cshtml
+++ b/MVCEntityApp/Views/employees/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@model IEnumerable<MVCEntityApp.Models.employee>
-
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
+<h2>Employee List</h2>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -47,5 +44,4 @@
         </td>
     </tr>
 }
-
 </table>
