--- a/MVCEntityApp/Views/employees/Create.cshtml
+++ b/MVCEntityApp/Views/employees/Create.cshtml
@@ -1,16 +1,12 @@
 ﻿@model MVCEntityApp.Models.employee
-
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
-
-
+<h2>Add Employee</h2>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+  
     <div class="form-horizontal">
         <h4>employee</h4>
         <hr />
@@ -22,7 +18,6 @@
                 @Html.ValidationMessageFor(model => model.employee_id, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.employee_name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -30,7 +25,6 @@
                 @Html.ValidationMessageFor(model => model.employee_name, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.department, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -38,7 +32,6 @@
                 @Html.ValidationMessageFor(model => model.department, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.joining_date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -46,7 +39,6 @@
                 @Html.ValidationMessageFor(model => model.joining_date, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.mobile_no, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -54,7 +46,6 @@
                 @Html.ValidationMessageFor(model => model.mobile_no, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -62,11 +53,9 @@
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
