--- a/MVCEntityApp/Views/employees/Delete.cshtml
+++ b/MVCEntityApp/Views/employees/Delete.cshtml
@@ -3,9 +3,7 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Delete</h2>
-
+<h2>Delete Employee</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>employee</h4>
@@ -44,7 +42,6 @@
         </dd>
 
     </dl>
-
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
