--- a/MVCEntityApp/Views/employees/Details.cshtml
+++ b/MVCEntityApp/Views/employees/Details.cshtml
@@ -1,11 +1,8 @@
 ﻿@model MVCEntityApp.Models.employee
-
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
+<h2> Employee Details</h2>
 <div>
     <h4>employee</h4>
     <hr />
